# niMSE-IO-BET-YFT

./: .gitignore  README.txt  Rprof.out  test.csv  test.data.rda  test.data2.rda  test.data3.rda
CPUEfromIOTC/: CPUE.1.input.fromDanFu.26Feb2020.R  CPUE.BET.input.R  CPUE.BET.input.new.R
MPs/: compileMPs.R
OMconditioning/: .gitignore  setup-examples.bat  setup-examples.sh  unzip.vbs
Objects/: Dummy.txt  Notes.txt  OMgridB19.0.List.RDA  OMgridB19.1.List.RDA  OMgridB19.2.List.RDA  OMgridB19.3.List.RDA  OMgridB19.4.List.RDA  OMgridB19.5.List.RDA  OMgridB20.1.List.RDA  OMgridY21.1.List.Converged.RDA  OMgridY21.1.List.RDA  OMrefB19.6.List.RDA  OMrefB20.1.List.RDA  OMrefY19.3.500.test.RDA  OMrefY19.3List.RDA  OMrefY19.4List.RDA  OMyft2r108.RDA  OMyftNEr.RDA  kobe.data.RDA  tunedMP.DB18.1.RDA  tunedMP.DB18.2.RDA  tunedMP.DB18.3.RDA  tunedMP.MB18.1.RDA  tunedMP.MB18.2.RDA  tunedMP.MB18.3.RDA
Report/: BET - state of the OM Sep2019.docx  BET OM update Mar2019 outline-PJ.docx  BET-state of the OM Mar2021.docx  New YFT plots and figures.docx  New YFT plots and figures.pngs.docx  YFT - state of the OM Sep2019.docx  YFT-state of the OM Mar2021.docx  niMSE-IO-BET-YFT User Manual.docx
Rscripts/: BET18.2_ph2_ script.R  BET19.1_MP_script.R  Build OM Model-OMrefB19.0.288.R  Build OM Model-OMrefB19.1.288.R  Build OM Model-OMrefB19.2.288.R  Build OM Model-OMrefB19.3.288.R  Build OM Model-OMrefB19.4.288.R  Build OM Model-OMrefB19.5.288.R  Build OM Model-OMrefB19.6.500.R  Build OM Model-OMrefB20.1.500.R  Build OM Model-OMrefY19.3.500.R  Build OM Model-OMrefY19.3.500.test.R  Build OM Model-OMrefY19.4.500.R  Build OM-gridY21.1.converged.500.R  Build OMyft2r108.R  Build OMyftNEr.R  Notes.txt  OMrefB19.4.288.tuning.R  OMrefB19.4.288.tuning.old.R  YFT18.1_ph2_ script.R  YFT19.1_MP_ script.R  YFTandBET_demo_ script.R  common_d.f95  (+17 more)
niMseom/: .gitignore  Makefile.am  configure.ac  niMseom.sln
niMseom/src/: .gitignore  D_niMseom.cpp  D_niMseom.hpp  D_niMseomMin.cpp  D_niMseomMin.hpp  Om_R_interface.r  niMseom.cpp  niMseom.hpp  niMseom.mk  niMseom.vcxproj  niMseomMin.cpp  niMseomMin.hpp  niMseom_registration.cpp
niMseom/src/include/: OmB_array_plans.hpp  OmB_array_plans_copy.hpp  OmB_array_plans_init.hpp  OmB_constructor_arrays_phase_1.hpp  OmB_constructor_arrays_phase_2.hpp  OmB_constructor_scalars_phase_1.hpp  OmB_decl_lib_interface_constructor.hpp  OmB_decl_lib_interface_globals.hpp  OmB_decl_lib_interface_methods.hpp  OmB_impl_lib_interface_constructor.hpp  OmB_impl_lib_interface_globals.hpp  OmB_impl_lib_interface_methods.hpp  OmB_impl_lib_registration.hpp  Om_constructor_args.hpp  Om_constructor_arrays_phase_1.hpp  Om_constructor_call_args.hpp  Om_decl_lib_interface_constructor.hpp  Om_decl_lib_interface_globals.hpp  Om_decl_lib_interface_methods.hpp  Om_impl_lib_interface_constructor.hpp  Om_impl_lib_interface_globals.hpp  Om_impl_lib_interface_methods.hpp  Om_impl_lib_registration.hpp  niMseom_reg_1.hpp  niMseom_reg_2.hpp
(+111 files in other folders)
